feat: retrieve updates
